objects/BMCServiceDesk__ServiceLevelAgreement__c.object
<CustomObject>
    <description>Stores the definition of different types of agreements (SLA, OLAs and Underpinning Contracts).</description>
    <fields>
        <fullName>BMCServiceDesk__AccountCount__c</fullName>
        <label>Account Count</label>
        <summaryForeignKey>BMCServiceDesk__SLA_Account_Link__c.BMCServiceDesk__FKSLA__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Account__c</fullName>
        <formula>BMCServiceDesk__FKAccount__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account~</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__AgreementOwner__c</fullName>
        <formula>BMCServiceDesk__FKAgreementOwner__r.Username</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agreement Owner~</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__AgreementTitle__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Use this field to enter a unique alphanumeric identifier that you want to assign to the service level agreement.</inlineHelpText>
        <label>Agreement Title</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__AgreementType__c</fullName>
        <inlineHelpText>From the list of options, select the type of service level agreement.</inlineHelpText>
        <label>Agreement Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Service Level Agreement</fullName>
                    <default>true</default>
                    <label>Service Level Agreement</label>
                </value>
                <value>
                    <fullName>Operational Level Agreement</fullName>
                </value>
                <value>
                    <fullName>Underpinning Contract</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Description__c</fullName>
        <inlineHelpText>Use this field to enter a description of the service level agreement. For example, you can describe the reason for creating this service level agreement.</inlineHelpText>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__EffectiveFrom__c</fullName>
        <inlineHelpText>Use this field to select the date when the service level agreement is effective.</inlineHelpText>
        <label>Effective From</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__EffectiveUntil__c</fullName>
        <inlineHelpText>Use this field to select the date when the service level agreement ends.</inlineHelpText>
        <label>Effective Until</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Export__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to tag a record for exporting SLA from RF SLA Migration package.</description>
        <inlineHelpText>Select this field to allow the record to be exported from the RF SLA Migration Pentaho package.</inlineHelpText>
        <label>Tag for Export</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>From the list of options, select the account of the service level agreement.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Service Level Agreements</relationshipLabel>
        <relationshipName>Service_Level_Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKAgreementOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>From the list of options, select the client of the service level agreement.</inlineHelpText>
        <label>Agreement Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Service_Level_Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKBusinessService__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>From the list of options, select the service of service level agreement.</inlineHelpText>
        <label>Service</label>
        <referenceTo>BMCServiceDesk__BMC_BaseElement__c</referenceTo>
        <relationshipLabel>Service Level Agreements</relationshipLabel>
        <relationshipName>Service_Level_Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKContentImport__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field forms a relationship between the Content Import object and the records imported in the Base Element, Request Definition, Template, Category, and Agreement objects. This field helps in tracking the imported record in the respective objects.</description>
        <label>Content Import</label>
        <referenceTo>BMCServiceDesk__ContentImport__c</referenceTo>
        <relationshipLabel>Agreements</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKSupportHours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>From the list of options, select the name of the business hours when the service level agreement is effective. The system administrator configures the business hours for your organization and these business hours appear in this list.</inlineHelpText>
        <label>Support Hours</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipName>Service_Level_Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ScheduledReview__c</fullName>
        <inlineHelpText>Use this field to select the date when the service level agreement must be reviewed.</inlineHelpText>
        <label>Scheduled Review</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ServiceName__c</fullName>
        <formula>BMCServiceDesk__FKBusinessService__r.BMCServiceDesk__Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__SupportHours__c</fullName>
        <formula>BMCServiceDesk__FKSupportHours__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Support Hours~</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__UnderReview__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is not selected by default. When the field is not selected, the imported records (records imported by using the Content Management tile) can be accessed by the system administrator only. The value of the field is set to True when the imported records are deployed to be accessed by users.</description>
        <label>Under Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__UpdateCount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Record Update Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__toAllAccounts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>To All Account</label>
        <type>Checkbox</type>
    </fields>
    <label>Agreement</label>
    <listViews>
        <fullName>BMCServiceDesk__All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>BMCServiceDesk__AgreementTitle__c</columns>
        <columns>BMCServiceDesk__AgreementType__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Agreement #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agreements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>BMCServiceDesk__Agreement_Type</fullName>
        <active>true</active>
        <errorConditionFormula>ISBlank(text(BMCServiceDesk__AgreementType__c))</errorConditionFormula>
        <errorDisplayField>BMCServiceDesk__AgreementType__c</errorDisplayField>
        <errorMessage>Agreement Type Cannot be None</errorMessage>
    </validationRules>
</CustomObject>